# northstar_master_server

./: .env  .gitignore  Cargo.toml  README.md  openapi.yaml
migrations/: 20220411101535_create_accounts.sql
player_data/: Cargo.toml
player_data/src/: de.rs  error.rs  lib.rs
src/: api.rs  id.rs  main.rs  promos.rs  routes_macro.rs
src/accounts/: handlers.rs  mod.rs  repository.rs  routes.rs
src/auth/: handlers.rs  mod.rs  routes.rs
src/game_servers/: handlers.rs  mod.rs  routes.rs  verify.rs
src/players/: handlers.rs  mod.rs  routes.rs
