[package]
name = "northstar_master_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "player_data",
]

[dependencies]
player_data = { path = "player_data" }

# Web server
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3.2"
futures-util = "0.3.21"

# Serialization
serde = "1.0.136"
serde_derive = "1.0.136"
serde_with = "1.12.1"
serde_json = "1.0.79"

# Logging
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

# Verification and auth requests
reqwest = { version = "0.11.10", features = ["json"] }
reqwest-middleware = "0.1.5"
reqwest-tracing = "0.2.1"

# Database
sqlx = { version = "0.5.11", features = [ "runtime-tokio-rustls", "sqlite", "migrate", "chrono" ] }

thiserror = "1.0.30"
rand = "0.8.5"
hex = "0.4.3"
chrono = "0.4.19"
once_cell = "1.10.0"
semver = "1.0.7"
bytes = "1.1.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
